--- a/index.html
+++ b/index.html
@@ -11,25 +11,32 @@
 </head>
 <body>
   <main>
-    <input type="text" class="textbox">
-    <div class="buttons-container">
-      <button>1</button>
-      <button>2</button>
-      <button>3</button>
-      <button>+</button>
-      <button>4</button>
-      <button>5</button>
-      <button>6</button>
-      <button>-</button>
-      <button>7</button>
-      <button>8</button>
-      <button>9</button>
-      <button>*</button>
-    </div>
-    <div class="last-btn">
-      <button>0</button>
-      <button style="width: 77.5%; font-size: 3rem;">EVALUATE</button>
+    <input type="text" class="textbox" autofocus>
+    <div class="main-btn-container">
+      <div class="last-btn">
+        <button style="font-size: 3rem;">CLR</button>
+        <button style="width: 79.5%; font-size: 3rem;">EVALUATE</button>
+      </div>
+      <div class="buttons-container">
+        <button>1</button>
+        <button>2</button>
+        <button>3</button>
+        <button>+</button>
+        <button>4</button>
+        <button>5</button>
+        <button>6</button>
+        <button>-</button>
+        <button>7</button>
+        <button>8</button>
+        <button>9</button>
+        <button>*</button>
+        <button>0</button>
+        <button>00</button>
+        <button>.</button>
+        <button>/</button>
+      </div>
     </div>
   </main>
+  <script src="./script.js"></script>
 </body>
 </html>
